--- a/Landing Page/landingPage.html
+++ b/Landing Page/landingPage.html
@@ -17,7 +17,7 @@
       <div class="logo"><span>NAJIYA</span> BOUTIQUE</div>
       <div>
         <a href="#">Home</a>
-        <a href="#">About</a>
+        <a href="#about_section">About</a>
         <a href="#">Categories</a>
         <a href="#">Services</a>
         <a href="#">Contact </a>
@@ -35,7 +35,7 @@
       </div>
       </header>
     <main>
-    <section class="about" id="about">
+    <section class="about" id="about_section">
       <h2 class="heading"><span>About </span>Us</h2>
       <div class="row">
       <div class="image-container">
